@@ -1,0 +1,2 @@
+# Ignore data files
+data/
