@@ -4,6 +4,14 @@
 -changes
 
 --------------
+December 13, 2025
+Name: Lucas Timmerman
+Changes:
+1. Updated main functions to accept inputs and adjust lattice and grid accordingly
+2. Added scripts for data generation and analysis
+3. Including gitignore
+
+--------------
 December 12, 2025
 Name: Sayan Bhowmik
 Changes: 
